# async_logger

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: benchmark_logger.cpp
docs/: benchmark_notes.md  design_notes.md
examples/: basic_usage.cpp
include/asynclogger/: async_logger.h  blocking_queue.h  log_file.h  log_level.h  log_message.h
src/: async_logger.cpp  log_file.cpp  log_level.cpp  log_message.cpp
tests/: CMakeLists.txt  blocking_queue_test.cpp  formatter_test.cpp  log_file_test.cpp  logger_test.cpp  test_support.h
